--- a/adventure.css
+++ b/adventure.css
@@ -29,3 +29,39 @@ body{
     border-color: #719ECE;
     /*box-shadow: 0 0 10px #719ECE;*/
   }
+
+.attribute-slider {
+  margin: 20px 0;
+  padding: 0 20px;
+}
+
+.slider {
+  width: 100%;
+  height: 25px;
+  -webkit-appearance: none;
+  background: #d3d3d3;
+  outline: none;
+  opacity: 0.7;
+  -webkit-transition: .2s;
+  transition: opacity .2s;
+}
+
+.slider:hover {
+  opacity: 1;
+}
+
+.slider::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  appearance: none;
+  width: 25px;
+  height: 25px;
+  background: #4CAF50;
+  cursor: pointer;
+}
+
+.slider::-moz-range-thumb {
+  width: 25px;
+  height: 25px;
+  background: #4CAF50;
+  cursor: pointer;
+}
